@startuml HayvanYardim_ER_Diagram

skinparam linetype ortho
skinparam entity {
  BackgroundColor #FEFEFE
  BorderColor #333333
}

title Hayvan Yardım - Entity Relationship Diagram

entity "users" as users {
  * **id** : INT <<PK>>
  --
  * email : VARCHAR(255) <<UNIQUE>>
  * password_hash : VARCHAR(255)
  * role : ENUM(admin, advisor, volunteer, vet, user)
  * first_name : VARCHAR(100)
  * last_name : VARCHAR(100)
  phone : VARCHAR(20)
  avatar_url : VARCHAR(500)
  latitude : DECIMAL(10,7)
  longitude : DECIMAL(10,7)
  reliability_score : DECIMAL(3,2) = 0.50
  is_active : BOOLEAN = TRUE
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "feeding_points" as fp {
  * **id** : INT <<PK>>
  --
  * name : VARCHAR(150)
  * latitude : DECIMAL(10,7)
  * longitude : DECIMAL(10,7)
  description : TEXT
  status : ENUM(active, needs_refill, inactive)
  last_refill_at : TIMESTAMP
  * created_by : INT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "feeding_point_refills" as fpr {
  * **id** : INT <<PK>>
  --
  * feeding_point_id : INT <<FK>>
  * volunteer_id : INT <<FK>>
  * refill_type : ENUM(food, water, both)
  note : TEXT
  photo_url : VARCHAR(500)
  status : ENUM(pending, approved, rejected)
  approved_by : INT <<FK>>
  created_at : TIMESTAMP
}

entity "reports" as reports {
  * **id** : INT <<PK>>
  --
  * reporter_id : INT <<FK>>
  * type : ENUM(injured_animal, feeding_point)
  * description : TEXT
  * latitude : DECIMAL(10,7)
  * longitude : DECIMAL(10,7)
  address : VARCHAR(500)
  photo_url : VARCHAR(500)
  priority : ENUM(low, medium, high, urgent)
  status : ENUM(pending, approved, assigned, ...)
  correction_note : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "animals" as animals {
  * **id** : INT <<PK>>
  --
  * report_id : INT <<FK>>
  species : VARCHAR(100)
  description : TEXT
  condition_level : ENUM(minor, moderate, severe, critical)
  photo_url : VARCHAR(500)
  status : ENUM(reported, in_rescue, at_vet, ...)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tasks" as tasks {
  * **id** : INT <<PK>>
  --
  report_id : INT <<FK>>
  assigned_by : INT <<FK>>
  assigned_to : INT <<FK>>
  * type : ENUM(rescue, feeding, vet_transport, other)
  status : ENUM(pending, accepted, rejected, ...)
  priority : ENUM(low, medium, high, urgent)
  notes : TEXT
  rejection_reason : TEXT
  deadline : TIMESTAMP
  started_at : TIMESTAMP
  completed_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "task_evidence" as te {
  * **id** : INT <<PK>>
  --
  * task_id : INT <<FK>>
  * uploaded_by : INT <<FK>>
  * photo_url : VARCHAR(500)
  description : TEXT
  created_at : TIMESTAMP
}

entity "vet_availability" as va {
  * **id** : INT <<PK>>
  --
  * vet_id : INT <<FK>> <<UNIQUE>>
  is_available : BOOLEAN = TRUE
  workload : ENUM(light, moderate, heavy)
  note : TEXT
  updated_at : TIMESTAMP
}

entity "vet_cases" as vc {
  * **id** : INT <<PK>>
  --
  * animal_id : INT <<FK>>
  * vet_id : INT <<FK>>
  task_id : INT <<FK>>
  diagnosis : TEXT
  treatment : TEXT
  outcome : ENUM(ongoing, recovered, released, deceased)
  notes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "donations" as donations {
  * **id** : INT <<PK>>
  --
  * donor_id : INT <<FK>>
  * amount : DECIMAL(10,2)
  payment_method : VARCHAR(50)
  note : TEXT
  created_at : TIMESTAMP
}

entity "purchases" as purchases {
  * **id** : INT <<PK>>
  --
  * admin_id : INT <<FK>>
  * description : VARCHAR(500)
  * amount : DECIMAL(10,2)
  receipt_url : VARCHAR(500)
  created_at : TIMESTAMP
}

entity "notifications" as notifs {
  * **id** : INT <<PK>>
  --
  * user_id : INT <<FK>>
  * title : VARCHAR(255)
  * message : TEXT
  type : ENUM(task_assigned, task_updated, ...)
  is_read : BOOLEAN = FALSE
  related_type : VARCHAR(50)
  related_id : INT
  created_at : TIMESTAMP
}

entity "system_settings" as settings {
  * **id** : INT <<PK>>
  --
  * setting_key : VARCHAR(100) <<UNIQUE>>
  * setting_value : TEXT
  updated_by : INT <<FK>>
  updated_at : TIMESTAMP
}

' === RELATIONSHIPS ===

' users -> feeding_points
users ||--o{ fp : "creates"

' feeding_points -> refills
fp ||--o{ fpr : "has refills"
users ||--o{ fpr : "volunteer refills"
users |o--o{ fpr : "advisor approves"

' users -> reports
users ||--o{ reports : "reports"

' reports -> animals (1:1)
reports ||--o| animals : "injured animal detail"

' reports -> tasks
reports ||--o{ tasks : "generates"

' users -> tasks (assigned_by = advisor)
users ||--o{ tasks : "advisor assigns"

' users -> tasks (assigned_to = volunteer)
users ||--o{ tasks : "volunteer executes"

' tasks -> evidence
tasks ||--o{ te : "has evidence"
users ||--o{ te : "uploads"

' users -> vet_availability (1:1)
users ||--o| va : "vet availability"

' animals -> vet_cases
animals ||--o{ vc : "treated in"
users ||--o{ vc : "vet handles"
tasks |o--o{ vc : "linked task"

' users -> donations
users ||--o{ donations : "donates"

' users -> purchases
users ||--o{ purchases : "admin purchases"

' users -> notifications
users ||--o{ notifs : "receives"

' users -> system_settings
users |o--o{ settings : "admin updates"

@enduml
